Edit course divs to prevent word overflow and add a further media query of min-width 800px and max-width 925px, and edit info-main padding and font size throughout the page.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -172,8 +172,9 @@ span.quote {
 }
 
 .subject {
-  max-width: 30%;
+  max-width: 29.25%;
   padding: 1rem;
+  display: table;
 }
 
 .subject img {
@@ -181,7 +182,14 @@ span.quote {
   height: auto;
 }
 
-p.description {
+.description {
+  width: 100%;
+  height: 100%;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.description p {
   padding-top: 0;
 }
 
@@ -194,13 +202,63 @@ footer {
   padding: 1rem 1.5rem;
 }
 
-@media only screen and (min-width:640px) {
+@media only screen and (max-width:925px) and (min-width:800px){
+  h3 {
+    font-size: 1.3rem;
+  }
+
+  p, span {
+    font-size: 0.87rem;
+  }
+
+  .section-title {
+    padding-top: 1rem;
+  }
+
+  .banner h3 {
+    font-size: 1.3rem;
+  }
+
+  .info-main .section-title {
+    padding-bottom: 0.5rem;
+  }
+
+  .info-main h2 {
+    font-size: 1.7rem;
+  }
+
+  span.quote {
+    padding-top: 1rem;
+  }
+
+  .info-main p {
+    font-size: 0.87rem;
+  }
+
+  .item h3 {
+    font-size: 1.25rem;
+  }
+
+  .item p {
+    font-size: 0.87rem;
+  }
+
+  .item span {
+    font-size: 0.85rem;
+  }
+
+  .subject {
+    max-width: 28.5%;
+  }
+}
+
+@media only screen and (min-width:800px) {
   .mobile {
     display: none;
   }
 }
 
-@media only screen and (max-width:640px) {
+@media only screen and (max-width:800px) {
 
   html {
     overflow-x: hidden;
